Thu Jun 27 09:50:25 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Service_Config_Test.cpp:
          Extended this test to run the usage of service config
          with multiple threads to check if we don't leak any TSS keys
          on Windows when ACE is used from a non ACE thread. With
          this addition I couldn't reproduce bugzilla 1797, but I still
          have to double check if the TSS is really triggered by
          my test addition

Wed Jun 26 14:20:47 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/coverity_profile.txt:
        * bin/ACE+TAO+CIAO+DAnCE.json:
          Renamed to the file Coverity expects

Wed Jun 26 11:32:43 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/coverity_profile.txt:
          Added coverity profile

Tue Jun 25 18:13:02 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.h:
          Doxygen improvement

Fri Jun 21 07:42:02 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_13_Test.cpp:
        * tests/Intrusive_Auto_Ptr_Test.cpp:
          Fixed some coverity reported errors

Thu Jun 20 16:24:03 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * protocols/ace/INet/FTP_Response.h:

          Change the name of the "NONE" value in the status subtype enum
          to avoid a conflict on VxWorks builds.

Wed Jun 19 22:33:03 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Filecache.h:
        * ace/Filecache.cpp:
        * ace/config-macosx-lion.h:

        * apps/gperf/src/List_Node.cpp:

          Clean up warnings on various nightly builds.

Tue Jun 18 07:16:22 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_21_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added new C++11 compiler feature test

Fri Jun  7 14:39:01 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/SOCK_Dgram_Test.cpp:
